# distMeas

./: CMakeLists.txt  main.cpp
include/: AppConfig.hpp  CoinDetector.h  GeometryUtils.h  ImagePipeline.h  MetrologyApp.hpp  PhoneDetector.h  PhoneDetector.hpp  SceneRenderer.h  SceneRenderer.hpp
sources/: CoinDetector.cpp  GeometryUtils.cpp  ImagePipeline.cpp  MetrologyApp.cpp  PhoneDetector.cpp  SceneRenderer.cpp  main.cpp
